--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,7 @@
 {
   "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
-  ],
-  "plugins": [
-      [
-        "@babel/plugin-proposal-class-properties"
-      ]
+    "@babel/preset-env",
+    "@babel/preset-react",
+    "@babel/preset-typescript"
   ]
 }
