--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "webpack-template",
+  "name": "react-cmp-template",
   "version": "1.0.0",
-  "description": "",
+  "description": "react项目模板",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open",
+    "start": "webpack-dev-server --open 'Google Chrome'",
     "build-prod": "webpack"
   },
   "keywords": [],
@@ -12,23 +12,35 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-class-properties": "*",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
+    "@babel/preset-typescript": "^7.12.1",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^2.5.7",
     "css-loader": "^3.4.0",
+    "cz-conventional-changelog": "^3.3.0",
     "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "html-webpack-plugin": "^4.5.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
+    "speed-measure-webpack-plugin": "^1.3.3",
     "style-loader": "^1.1.2",
-    "webpack": "^4.41.4",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "ts-loader": "^8.0.5",
+    "typescript": "^4.0.3",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "node-sass": "^4.13.0",
-    "sass-loader": "^8.0.0"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
